--- a/index.html
+++ b/index.html
@@ -30,15 +30,48 @@
 
         <hr />
         <h2>成果物</h2>
+        <div class="row">
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="./teacup.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">3D ポリゴンレンダラー</h5>
+                        <p class="card-text">
+                            3D ポリゴンを陰影付きで描画するソフトウェア
+                        </p>
+                        <a href="#heading-3drender" class="btn btn-primary">詳細</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="./maze.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">3D 迷路</h5>
+                        <a href="#heading-pygames" class="btn btn-primary">詳細</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="./minesweeper.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">マインスイーパー</h5>
+                        <a href="#heading-pygames" class="btn btn-primary">詳細</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
         <div class="accordion" id="artifacts">
             <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
+                <h2 class="accordion-header" id="heading-objweb">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                         オブジェクト認識サイト
                     </button>
                 </h2>
-                <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
+                <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="heading-objweb">
                     <div class="accordion-body">
                         概要：
                         画像をアップロードするとそれに写っているオブジェクトを認識してくれるサイト
@@ -79,13 +112,13 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
+                <h2 class="accordion-header" id="heading-webportfolio">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         Web ポートフォリオ
                     </button>
                 </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="heading-webportfolio">
                     <div class="accordion-body">
                         現在工事中!<a href="https://getbootstrap.jp/">Bootstrap</a> を使って作成しています。
                         リンクは<a href="https://yt-koike.github.io/portfolio/">こちら</a>
@@ -94,13 +127,13 @@
             </div>
 
             <div class="accordion-item">
-                <h2 class="accordion-header" id="headingThree">
+                <h2 class="accordion-header" id="heading-3drender">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                         3D ポリゴンレンダラー
                     </button>
                 </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="heading-3drender">
                     <div class="accordion-body">
                         概要： 3D ポリゴンを陰影付きで描画するソフトウェア
                         <br>
@@ -121,19 +154,19 @@
                         <br>
                         得たこと: 3DCGの知識、ハードウェア支援の実装方法と効果を学びました。
                         <br>
-                        公開: ソースコードを GitHub 上(https://github.com/yt-koike/3D_Renderer)にて公開
+                        公開: ソースコードを<a href="https://github.com/yt-koike/3D_Renderer">GitHub</a>にて公開
                     </div>
                 </div>
             </div>
 
             <div class="accordion-item">
-                <h2 class="accordion-header" id="headingFour">
+                <h2 class="accordion-header" id="heading-pygames">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                         迷路ゲームとマインスイーパー
                     </button>
                 </h2>
-                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour">
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="heading-pygames">
                     <div class="accordion-body">
                         概要: Pygame ライブラリでゲームを 2 つ開発しました。
                         <br>
@@ -153,8 +186,9 @@
                         <br>
                         得たこと: Python の使い方と読みやすいプログラムの書き方を学びました。加えて直接的な関係は不明ですがが、成果物としてバンダイナムコに提出したところ、インターンシップ選考に合格しました。
                         <br>
-                        公開: ソースコードを GitHub 上にて公開している。迷路ゲーム: https://github.com/yt-koike/PyMaze, マインスイーパー:
-                        https://github.com/yt-koike/PyMineSweeper
+                        公開: ソースコードを GitHub 上にて公開しています。<a href="https://github.com/yt-koike/PyMaze">迷路ゲーム</a>,
+                        <a href="https://github.com/yt-koike/PyMineSweeper">マインスイーパー</a>
+
                     </div>
                 </div>
             </div>
@@ -185,10 +219,15 @@
             <h2>外部リンク</h2>
             <a href="https://github.com/yt-koike"> GitHub </a>
         </div>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+    </div>
+    <footer class="footer" style="position: absolute;width: 100%;height: 60px;background-color: #f5f5f5">
+        <div class="container">
+            <p class="text-muted">最終更新日: 2023/03/08</p>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
