add intern experience

--- a/index.html
+++ b/index.html
@@ -215,7 +215,28 @@
                 </li>
             </ul>
             <hr />
-
+            <h2> インターンシップ経験</h2>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    楽天グループ株式会社 (5日間)
+                </li>
+                <li class="list-group-item">
+                    株式会社バンダイナムコスタジオ (5日間)
+                </li>
+                <li class="list-group-item">
+                    株式会社Appify Technologies (6か月間)
+                </li>
+                <li class="list-group-item">
+                    株式会社アクシス (1日)
+                </li>
+                <li class="list-group-item">
+                    NTTデータ先端技術株式会社 (5日間)
+                </li>
+                <li class="list-group-item">
+                    三菱電機エンジニアリング株式会社 (1日)
+                </li>
+            </ul>
+            <hr />
             <h2>外部リンク</h2>
             <a href="https://github.com/yt-koike"> GitHub </a>
         </div>
