--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         大学の Python 授業で出された課題のために開発しました。工夫点はロジックと描画機能を分離して実装したことで、Pygame
                         以外のライブラリへの移植性を高めたことです。苦労した点はプログラムを読みやすいものにするために、クラスや関数を設計したことです。
                         <br>
-                        得たこと: Python の使い方と読みやすいプログラムの書き方を学びました。加えて直接的な関係は不明ですがが、成果物としてバンダイナムコに提出したところ、インターンシップ選考に合格しました。
+                        得たこと: Python の使い方と読みやすいプログラムの書き方を学びました。
                         <br>
                         公開: ソースコードを GitHub 上にて公開しています。<a href="https://github.com/yt-koike/PyMaze">迷路ゲーム</a>,
                         <a href="https://github.com/yt-koike/PyMineSweeper">マインスイーパー</a>
