--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
         <h2>学業</h2>
 
-        大学の成績は学部でもトップクラスであり、大学 3 年春時点での累積 GPA は 3.55
-        以上です。特にプログラミングの授業は全て S 評価を取得しました。
+        大学の成績は学部でもトップクラスであり、大学卒業時点での合計 GPA は 3.61
+        です。特にプログラミングの授業は全て S 評価を取得しました。
 
         <hr />
         <h2>成果物</h2>
