--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <ul class="list-group">
             <li class="list-group-item">TOEIC 935 点 (Listening: 470, Reading: 465) 取得年月: 2023/10</li>
             <li class="list-group-item">TOEFL iBT 84 点 (Listening: 22, Reading: 26, Speaking: 15, Writing: 21) 取得年月: 2023/07</li>
-            <li class="list-group-item">普通自動車第一種運転免許</li>
-            <li class="list-group-item">CG エンジニア検定 エキスパート</li>
+            <li class="list-group-item">普通自動車第一種運転免許 取得年月: 2022/03</li>
+            <li class="list-group-item">CG エンジニア検定 エキスパート 取得年月: 2022/12</li>
             <li class="list-group-item">剣道二段</li>
         </ul>
         <hr />
@@ -229,13 +229,13 @@
             <h2> インターンシップ経験</h2>
             <ul class="list-group">
                 <li class="list-group-item">
+                    株式会社Appify Technologies(現: <a href="https://stack.inc/">株式会社Stack</a>) (5日間, 2022/08 以降はアルバイトとして雇用され現在も勤務)
+                </li>
+                <li class="list-group-item">
                     楽天グループ株式会社 (5日間)
                 </li>
                 <li class="list-group-item">
                     株式会社バンダイナムコスタジオ (5日間)
-                </li>
-                <li class="list-group-item">
-                    株式会社Appify Technologies (6か月間)
                 </li>
                 <li class="list-group-item">
                     株式会社アクシス (1日)
