--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
     <div class="container">
         <h2>保有資格</h2>
         <ul class="list-group">
+            <li class="list-group-item"><a href="https://www.ipa.go.jp/shiken/kubun/ap.html">応用情報技術者試験合格</a> 取得年月: 2024/07</li>
             <li class="list-group-item">TOEIC 935 点 (Listening: 470, Reading: 465) 取得年月: 2023/10</li>
             <li class="list-group-item">TOEFL iBT 84 点 (Listening: 22, Reading: 26, Speaking: 15, Writing: 21) 取得年月: 2023/07</li>
-            <li class="list-group-item">普通自動車第一種運転免許 取得年月: 2022/03</li>
             <li class="list-group-item">CG エンジニア検定 エキスパート 取得年月: 2022/12</li>
+            <li class="list-group-item">普通自動車第一種運転免許 取得年月: 2022/03</li>
             <li class="list-group-item">剣道二段</li>
         </ul>
         <hr />
@@ -254,7 +255,7 @@
     </div>
     <footer class="footer" style="position: absolute;width: 100%;height: 60px;background-color: #f5f5f5">
         <div class="container">
-            <p class="text-muted">最終更新日: 2024/04/08</p>
+            <p class="text-muted">最終更新日: 2024/07/04</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
