言葉遣いを修正

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
         <h2>保有資格</h2>
         <ul class="list-group">
-            <li class="list-group-item"><a href="https://www.ipa.go.jp/shiken/kubun/ap.html">応用情報技術者試験合格</a> 取得年月: 2024/07</li>
+            <li class="list-group-item"><a href="https://www.ipa.go.jp/shiken/kubun/ap.html">応用情報技術者試験</a> 合格年月: 2024/07</li>
             <li class="list-group-item">TOEIC 935 点 (Listening: 470, Reading: 465) 取得年月: 2023/10</li>
             <li class="list-group-item">TOEFL iBT 84 点 (Listening: 22, Reading: 26, Speaking: 15, Writing: 21) 取得年月: 2023/07</li>
             <li class="list-group-item">CG エンジニア検定 エキスパート 取得年月: 2022/12</li>
