卒業研究について追加

--- a/index.html
+++ b/index.html
@@ -70,10 +70,22 @@
       <hr />
 
       <h2>学業</h2>
-
       大学の成績は学部でもトップクラスであり、大学卒業時点での合計 GPA は 3.61
-      でした。特にプログラミングの授業は全て S 評価を取得しました。
-
+      、学部首席で卒業いたしました。特にプログラミングの授業は全て S
+      評価を取得しました。
+      <br />
+      卒業論文では「曲線近傍を移動する視点から見えるステレオ自由視点画像の高速生成」というタイトルの研究をおこないました。
+      <ul>
+        <li>
+          <a href="documents/thesis_abstract.pdf">卒業論文抄録</a>
+        </li>
+        <li>
+          <a href="documents/thesis_full.pdf">卒業論文全文</a>
+        </li>
+        <li>
+          <a href="documents/thesis_presentation.pptx">卒業論文発表資料</a>
+        </li>
+      </ul>
       <hr />
 
       <h2>取り組み略歴</h2>
