--- a/index.html
+++ b/index.html
@@ -360,11 +360,15 @@
         <h2>インターンシップ経験</h2>
         <ul class="list-group">
           <li class="list-group-item">
+            ソニー株式会社 Research&Development 部門(3週間)
+          </li>
+          <li class="list-group-item">
             株式会社Appify Technologies(現:
             <a href="https://stack.inc/">株式会社Stack</a>) (5日間, 2022/08
             以降はアルバイトとして雇用され現在も勤務)
           </li>
           <li class="list-group-item">楽天グループ株式会社 (5日間)</li>
+          <li class="list-group-item">株式会社サイバーエージェント (2日間)</li>
           <li class="list-group-item">
             株式会社バンダイナムコスタジオ (5日間)
           </li>
