--- a/zh-ch.html
+++ b/zh-ch.html
@@ -11,20 +11,19 @@
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <span class="align-items-center display-4">Koike Yutaro </span>
     </header>
-
     <div class="container">
-        <h2>Education</h2>
+        <h2>学歴</h2>
         <ul class="list-group">
-            <li class="list-group-item">Hosei High School [2017/04～2020/03]</li>
+            <li class="list-group-item">法政大学高等学校 [2017/04～2020/03]</li>
             <li class="list-group-item">
-                Hosei University, Faculty of Computer Science and Information Science [2020/04～2024/03]
+                法政大学 情報科学部 ディジタルメディア学科 [2020/04～2024/03]
             </li>
             <li class="list-group-item">
-                Hosei University, Graduate School of Computer and Information Sciences [2024/04～2026/03]
+                法政大学 情報科学研究科 [2024/04～2026/03 見込]
             </li>
         </ul>
         <br />
-        <h2>Qualifications</h2>
+        <h2>保有資格</h2>
         <ul class="list-group">
             <li class="list-group-item">
                 <a href="https://www.ipa.go.jp/shiken/kubun/ap.html">Applied Information Technology Engineer
@@ -48,7 +47,7 @@
         </ul>
         <hr />
 
-        <h2>Academic Works</h2>
+        <h2>学業</h2>
 
         I was one of the top undergraduates in his class, with a combined GPA of 3.61
         at the time of my graduation. I received S grades in all of my classes,
@@ -103,11 +102,11 @@
                         what is in the photograph.
                         <table border="1">
                             <tr>
-                                <th>Topic</th>
-                                <th>Content</th>
+                                <th>項目</th>
+                                <th>内容</th>
                             </tr>
                             <tr>
-                                <td>Related Tech</td>
+                                <td>関連技術</td>
                                 <td>
                                     <span class="badge rounded-pill bg-dark">Apache HTTP Server</span>
                                     <span class="badge rounded-pill bg-dark">PHP</span>
@@ -115,16 +114,16 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>Project Duration</td>
+                                <td>期間</td>
                                 <td>2020/07~2020/08</td>
                             </tr>
                             <tr>
-                                <td>Project Members</td>
-                                <td>Only me</td>
+                                <td>人数</td>
+                                <td>1 人</td>
                             </tr>
                             <tr>
-                                <td>Project Tasks</td>
-                                <td>Designing, implementing and testing</td>
+                                <td>担当</td>
+                                <td>設計・実装・テストの全て</td>
                             </tr>
                         </table>
                         背景/工夫した点/苦労した点： オブジェクト認識技術を Web
@@ -146,7 +145,7 @@
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="heading-webportfolio">
                     <div class="accordion-body">
-                        I am working on it! Thank you.
+                        I am working on it! Thank
                         <a href="https://getbootstrap.jp/">Bootstrap</a>. Located at
                         <a href="https://yt-koike.github.io/portfolio/">here</a>
                     </div>
@@ -220,49 +219,46 @@
                 </div>
             </div>
             <br />
-            <h4>Others</h4>
+            <h4>その他</h4>
             <ul class="list-group">
                 <li class="list-group-item">
-                    I developed an OCR and morse code decoder (audio2text) programs in MATLAB class.
+                    大学の MATLAB
+                    授業にて光学式文字認識プログラムやモールス信号解読(音声->文字)プログラムを開発
                 </li>
                 <li class="list-group-item">
-                    At the age of twelve, I developed an image editor program in Hot Soup Processor.
+                    12
+                    歳のときにホットスーププロセッサ(HSP)というプログラミング言語で画像編集ソフトを開発
                 </li>
                 <li class="list-group-item">
-                    I build a file server with RaspberryPi and external harddrives regarding the data loss by laptop
-                    failure.
+                    ノート PC の故障によるデータ消失を受けて、自宅ファイルサーバを
+                    RaspberryPi + 外部 HDD で構築
                 </li>
                 <li class="list-group-item">
-                    I controlled LED via radio wave using ESP32 chip.
+                    無線機能付きマイクロチップ(ESP32)にソフトウェアを組み込み、 Wi-Fi 経由で
+                    LED を操作できるようにした
                 </li>
                 <li class="list-group-item">
-                    I designed and simulated a virtual CPU implemented in ModelSim.
+                    ModelSim を使ってパイプラインCPU を設計し動作シミュレーションをした
                 </li>
-                <li class="list-group-item">I build my own desktop PC from parts.</li>
+                <li class="list-group-item">デスクトップパソコンを部品から組み立て</li>
             </ul>
             <hr />
-            <h2>Internship Experience</h2>
+            <h2>インターンシップ経験</h2>
             <ul class="list-group">
                 <li class="list-group-item">
-                    Appify Technologies(Now:
-                    <a href="https://stack.inc/">Stack</a>) (5 days, I am still working occasionally since 2022/08)
+                    株式会社Appify Technologies(現:
+                    <a href="https://stack.inc/">株式会社Stack</a>) (5日間, 2022/08
+                    以降はアルバイトとして雇用され現在も勤務)
                 </li>
-                <li class="list-group-item">Rakuten Group, Inc. (5 days)</li>
-                <li class="list-group-item">Bandai Namco Studio (5 days)</li>
-                <li class="list-group-item">Axis (1 day)</li>
-                <li class="list-group-item">NTT DATA INTELLILINK Corporation (5 days)</li>
-                <li class="list-group-item">MITSUBISHI ELECTRIC ENGINEERING Co., Ltd. (1 day)</li>
+                <li class="list-group-item">楽天グループ株式会社 (5日間)</li>
+                <li class="list-group-item">株式会社バンダイナムコスタジオ (5日間)</li>
+                <li class="list-group-item">株式会社アクシス (1日)</li>
+                <li class="list-group-item">NTTデータ先端技術株式会社 (5日間)</li>
+                <li class="list-group-item">三菱電機エンジニアリング株式会社 (1日)</li>
             </ul>
             <hr />
-            <h2>External Links</h2>
-            <a href="https://github.com/yt-koike">
-                <img src="github-mark.svg" width="30px" height="30px" />
-            </a>
-            <br />
-            <a
-                href="https://docs.google.com/forms/d/e/1FAIpQLSct7CH5CFg0FmUvRUkt8srFnAyQ0kxXXxN3AQqLW8yneMh0zQ/viewform?usp=sf_link">
-                Contact Form
-            </a>
+            <h2>外部リンク</h2>
+            <a href="https://github.com/yt-koike"> GitHub </a>
         </div>
     </div>
     <footer class="footer" style="
@@ -273,7 +269,7 @@
   ">
         <div class="container">
             <p class="text-muted">
-                Last Updated:
+                更新日:
                 <span id="#lastUpdatedDate"></span>
                 <script src="updatedDate.js"></script>
             </p>
