bigger language select UI

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
   <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
     <span class="align-items-center display-4">Koike Yutaro
       <br>
-      <select class="form-select " size="3" aria-label="Select Language" id="#languageSelect"
-        onclick="location.href = this.value">
-        <option value="jp.html" selected>日本語</option>
+      <select class="form-select form-select-lg mb-3" size="4" aria-label="Select Language" id="#languageSelect"
+        onchange="location.href = this.value">
+        <option value="index.html" selected>Select Your Language</option>
+        <option value="jp.html">日本語</option>
         <option value="en.html">English</option>
         <option value="zh-ch.html">中文</option>
       </select>
