--- a/en.html
+++ b/en.html
@@ -11,7 +11,9 @@
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <span class="align-items-center display-4">Koike Yutaro </span>
     </header>
-
+    <p style="text-align: right">
+        <a href="ja.html">日本語</a><a href="en.html">English</a> <a href="zh-ch.html">中文</a>
+    </p>
     <div class="container">
         <h2>Education</h2>
         <ul class="list-group">
