--- a/zh-ch.html
+++ b/zh-ch.html
@@ -11,6 +11,10 @@
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <span class="align-items-center display-4">Koike Yutaro </span>
     </header>
+    <p style="text-align: right">
+        <a href="ja.html">日本語</a><a href="en.html">English</a> <a href="zh-ch.html">中文</a>
+    </p>
+
     <div class="container">
         <h2>学歴</h2>
         <ul class="list-group">
