add paiza qualification

--- a/en.html
+++ b/en.html
@@ -29,6 +29,9 @@
         <h2>Qualifications</h2>
         <ul class="list-group">
             <li class="list-group-item">
+                <a href="https://paiza.jp/challenges/ranks/s/info">Paiza S Rank</a> Passed @ 2024/08
+            </li>
+            <li class="list-group-item">
                 <a href="https://www.ipa.go.jp/shiken/kubun/ap.html">Applied Information Technology Engineer
                     Examination(AP)</a>; Passed @ 2024/07
             </li>
