--- a/ja.html
+++ b/ja.html
@@ -44,6 +44,9 @@
     <h2>保有資格</h2>
     <ul class="list-group">
       <li class="list-group-item">
+        <a href="https://paiza.jp/challenges/ranks/s/info">Paiza S ランク</a> 取得年月: 2024/08
+      </li>
+      <li class="list-group-item">
         <a href="https://www.ipa.go.jp/shiken/kubun/ap.html">応用情報技術者試験</a>
         合格年月: 2024/07
       </li>
