More accesable Contact Form

--- a/zh-ch.html
+++ b/zh-ch.html
@@ -11,8 +11,13 @@
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <span class="align-items-center display-4">Koike Yutaro </span>
     </header>
-    <p style="text-align: right">
+    <p style="text-align: right; padding-right: 2em;">
         <a href="ja.html">日本語</a><a href="en.html">English</a> <a href="zh-ch.html">中文</a>
+        <br>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSct7CH5CFg0FmUvRUkt8srFnAyQ0kxXXxN3AQqLW8yneMh0zQ/viewform?usp=sf_link"
+            class="btn btn-primary">
+            Contact Me
+        </a>
     </p>
 
     <div class="container">
