--- a/ja.html
+++ b/ja.html
@@ -24,8 +24,13 @@
   <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
     <span class="align-items-center display-4">Koike Yutaro </span>
   </header>
-  <p style="text-align: right">
+  <p style="text-align: right; padding-right: 2em;">
     <a href="ja.html">日本語</a><a href="en.html">English</a> <a href="zh-ch.html">中文</a>
+    <br>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSct7CH5CFg0FmUvRUkt8srFnAyQ0kxXXxN3AQqLW8yneMh0zQ/viewform?usp=sf_link"
+      class="btn btn-primary">
+      Contact Me
+    </a>
   </p>
 
   <div class="container">
@@ -495,11 +500,7 @@
       <a href="https://github.com/yt-koike">
         <img src="github-mark.svg" width="30px" height="30px" />
       </a>
-      <br />
-      <a
-        href="https://docs.google.com/forms/d/e/1FAIpQLSct7CH5CFg0FmUvRUkt8srFnAyQ0kxXXxN3AQqLW8yneMh0zQ/viewform?usp=sf_link">
-        Contact Form
-      </a>
+
     </div>
   </div>
   <footer class="footer" style="
