画像類似度比較 Web アプリについて追記

--- a/ja.html
+++ b/ja.html
@@ -410,6 +410,39 @@
           </div>
         </div>
       </div>
+            <div class="accordion-item">
+        <h2 class="accordion-header" id="heading-prefecture">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+            画像類似度比較 Web アプリ
+          </button>
+        </h2>
+        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="heading-pygames">
+          <div class="accordion-body">
+            概要: 画像を 2 つアップロードすると、PSNR, SSIM, LPIPS で比較できます。
+            <br />
+            関連技術:
+            <span class="badge rounded-pill bg-dark">React</span>
+            <span class="badge rounded-pill bg-dark">Next.js</span>
+            <br />
+            期間: 2025/03/27
+            <br />
+            人数: 1 人
+            <br />
+            担当: 設計・実装の全て
+            <br />
+            背景/工夫した点/苦労した点:
+            よく使う比較の手間を減らすために Web ブラウザ上で比較できるようにしました。
+            StreamLit を使うことで無料でデプロイすることができました。
+            StreamLit を習得することが大変でした。
+            <br />
+            得たこと: StreamLit を使って Python だけで動的 Web サイトを構築、デプロイする方法を学びました。
+            <br />
+            公開: ソースコードを GitHub 上にて公開しています。<a href="https://github.com/yt-koike/ImageSimularity">ソースコード</a>,
+            <a href="https://image-simularity-ibm6rsdrbk.streamlit.app/">実際のサイト</a>
+          </div>
+        </div>
+      </div>
       <div class="accordion-item">
         <h2 class="accordion-header" id="heading-lenticular">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
