--- a/ja.html
+++ b/ja.html
@@ -410,14 +410,14 @@
           </div>
         </div>
       </div>
-            <div class="accordion-item">
-        <h2 class="accordion-header" id="heading-prefecture">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="heading-image-simularity">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-            data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+            data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
             画像類似度比較 Web アプリ
           </button>
         </h2>
-        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="heading-pygames">
+        <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="heading-pygames">
           <div class="accordion-body">
             概要: 画像を 2 つアップロードすると、PSNR, SSIM, LPIPS で比較できます。
             <br />
