--- a/ja.html
+++ b/ja.html
@@ -446,11 +446,11 @@
       <div class="accordion-item">
         <h2 class="accordion-header" id="heading-lenticular">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-            data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+            data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">
             レンチキュラー表示・編集サイト
           </button>
         </h2>
-        <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="heading-pygames">
+        <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading-pygames">
           <div class="accordion-body">
             概要: レンチキュラー用の画像を PC や
             スマホ上で表示・編集できます。
