--- a/ja.html
+++ b/ja.html
@@ -514,8 +514,7 @@
         </li>
         <li class="list-group-item">
           株式会社Appify Technologies(現:
-          <a href="https://stack.inc/">株式会社Stack</a>) (5日間, 2022/08
-          以降はアルバイトとして雇用され現在も勤務)
+          <a href="https://stack.inc/">株式会社Stack</a>) (5日間, 2022/08～2025 はアルバイトとして勤務)
         </li>
         <li class="list-group-item">楽天グループ株式会社 (5日間)</li>
         <li class="list-group-item">株式会社サイバーエージェント (2日間)</li>
