--- a/ja.html
+++ b/ja.html
@@ -34,7 +34,12 @@
   </p>
 
   <div class="container">
-
+    <h2>NEWS</h2>
+    <div class="bg-image hover-overlay mx-auto p-2" style="width: 800px;">
+      <a href="https://aiandtalk.peatix.com/">
+        <img src="speak.png" class="img-fluid w-100" alt="">
+      </a>
+    </div>
     <h2>学歴</h2>
     <ul class="list-group">
       <li class="list-group-item">法政大学高等学校 [2017/04～2020/03]</li>
@@ -381,8 +386,8 @@
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header" id="heading-lenticular">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-            data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7"
+            aria-expanded="false" aria-controls="collapse7">
             レンチキュラー表示・編集サイト
           </button>
         </h2>
