--- a/ja.html
+++ b/ja.html
@@ -37,7 +37,7 @@
     <h2>NEWS</h2>
     <div class="bg-image hover-overlay mx-auto p-2" style="width: 800px;">
       <a href="https://aiandtalk.peatix.com/">
-        <img src="speak.png" class="img-fluid w-100" alt="">
+        <img src="speak.png" width="80%" alt="">
       </a>
     </div>
     <h2>学歴</h2>
