--- a/ja.html
+++ b/ja.html
@@ -35,7 +35,7 @@
 
   <div class="container">
     <h2>NEWS</h2>
-    <div class="bg-image hover-overlay mx-auto p-2" style="width: 800px;">
+    <div style="text-align: center">
       <a href="https://aiandtalk.peatix.com/">
         <img src="speak.png" width="80%" alt="">
       </a>
