--- a/zh-ch.html
+++ b/zh-ch.html
@@ -5,6 +5,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 <link rel="stylesheet" href="main.css" />
 <title>Portfolio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
