--- a/prompt.html
+++ b/prompt.html
@@ -30,6 +30,7 @@
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
+                        発想力が必要な場面で、何も出てこない…そんなときの頼れる相棒がこのプロンプト。商品企画、コンテンツ制作、サービス改善などに役立つ「斬新な使い方」や「別視点の提案」をAIに出してもらえます。<br><br>
                         <code>「◯◯」の新しい使い方や用途を10個、実用性や面白さを意識して提案してください。</code>
                     </div>
                 </div>
@@ -44,6 +45,7 @@
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
+                        やるべきことは頭の中にあるのに、何から手をつけていいかわからない…。そんなとき、AIに整理してもらえば、優先順位と作業手順が明確になります。時間の見積もりもできて、行動に移しやすくなります。<br><br>
                         <code>
                         以下のやるべきことを、優先順位をつけてステップに分解してください。また、見積もり所要時間も付けてください。
                         やること: ◯◯◯◯◯
@@ -61,6 +63,7 @@
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
+                        ブログの最初の数行で読者の心をつかめるかが勝負。読み続けたくなる導入文を、プロのライターのようにサッと出したいなら、このプロンプト。SEO対策にも役立つ「読ませる導入」が手に入ります。<br><br>
                         <code>
                         ◯◯というテーマでブログを書こうとしています。最初の導入文として、読み手が続きを読みたくなるような100～150文字の導入を書いてください。
                         </code>
@@ -77,6 +80,7 @@
                 <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
+                        メールの返信、言葉遣いが正しいか不安なときってありますよね。特に上司や取引先には失礼のないようにしたいもの。このプロンプトを使えば、自然で丁寧なビジネス文がすぐに整います。<br><br>
                         <code>
                         以下の内容に対して、ビジネスの場にふさわしい丁寧な返信メールの文面を考えてください。
                         件名: ◯◯
@@ -96,6 +100,7 @@
                 <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
+                        難しい概念や理論を、やさしく解説してほしいときに便利なプロンプト。特に学生や新人研修、初心者向けの資料づくりにも最適です。専門用語をかみくだいて説明してくれます。<br><br>
                         <code>
                         ◯◯という内容を、高校1年生にもわかるように、できるだけ具体例を交えてやさしく説明してください。
                         </code>
@@ -113,6 +118,7 @@
                 <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
+                        YouTubeやSNS用の短尺動画、何から作ればいいかわからない…というときに役立つのがこのプロンプト。3分前後でまとまる構成を、導入からオチまで考えてくれます。台本のたたき台にも。<br><br>
                         <code>
                         YouTube用に、◯◯というテーマで3分程度のスクリプト構成を考えてください。
                         構成は「導入 → 内容1 → 内容2 → まとめ」の4部構成でお願いします。
@@ -131,6 +137,7 @@
                 <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
+                        会議の内容をあとから見返すのって大変…。このプロンプトを使えば、膨大な議事録も一気に要点整理。誰が何を言ったかが一目でわかり、報告資料にもそのまま使えます。<br><br>
                         <code>
                         以下の議事録を、発言者と主な内容を簡潔に整理して要約してください。
                         【議事録】
@@ -150,6 +157,7 @@
                 <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
+                        ちょっとしたコード修正や機能追加も、AIなら瞬時に提案・修正してくれます。Pythonなどのコードを与えて、「ここをこうして」と言うだけ。エラーの予防や学習にも最適です。<br><br>
                         <code>
                         以下のPythonコードに、◯◯という機能を追加してください。全体のコードを修正後に出力してください。
                         【コード】
@@ -169,6 +177,7 @@
                 <div id="collapse9" class="accordion-collapse collapse" aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
+                        直訳は不自然、でも意訳しすぎても意味がずれる…。そんなジレンマを解決するプロンプトです。口語調からビジネス英語まで、ニュアンスを保った自然な翻訳が可能です。<br><br>
                         <code>
                         以下の英文を自然な日本語に翻訳してください。口語で違和感のない表現にしてください。
                         【英語】
@@ -188,6 +197,7 @@
                 <div id="collapse10" class="accordion-collapse collapse" aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
+                        X（旧Twitter）での発信、ネタが尽きたときに役立つのがこのプロンプト。テーマを渡せば、短くてインパクトのある「バズりそうな投稿」を3案出してくれます。SNS運用者必携！<br><br>
                         <code>
                         ◯◯というテーマで、X（旧Twitter）向けに共感・反応がもらえそうな短文投稿（140文字以内）を3つ作ってください。
                         </code>
